update package.json for gh pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "heroes",
-  "homepage": "https://github.com/Rcolon100/heroes",
+  "homepage": "https://rcolon100.github.io/heroes/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
